--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "composer-plugin-api": "^2"
   },
   "require-dev": {
-    "wyrihaximus/async-test-utilities": "^8.0.5"
+    "wyrihaximus/test-utilities": "^7.0.0"
   },
   "autoload": {
     "psr-4": {
@@ -35,7 +35,8 @@
       "ergebnis/composer-normalize": true,
       "icanhazstring/composer-unused": true,
       "infection/extension-installer": true,
-      "mindplay/composer-locator": true
+      "mindplay/composer-locator": true,
+      "phpstan/extension-installer": true
     },
     "platform": {
       "php": "8.3.13"
