--- a/etc/qa/phpstan.neon
+++ b/etc/qa/phpstan.neon
@@ -1,15 +1,6 @@
 parameters:
+	level: max
 	ergebnis:
 		noExtends:
 			classesAllowedToBeExtended:
 				- Composer\IO\NullIO
-	ignoreErrors:
-		-
-			message: '#thecodingmachine#'
-			path: ../../src/Composer/Installer.php
-		-
-			message: '#thecodingmachine#'
-			path: ../../tests/Composer/InstallerTest.php
-
-includes:
-	- ../../vendor/wyrihaximus/test-utilities/rules.neon
