--- a/composer.json
+++ b/composer.json
@@ -48,10 +48,12 @@
   },
   "scripts": {
     "post-install-cmd": [
+      "make on-install-or-update || true",
       "composer normalize",
       "composer update --lock --no-scripts"
     ],
     "post-update-cmd": [
+      "make on-install-or-update || true",
       "composer normalize",
       "composer update --lock --no-scripts"
     ],
