--- a/composer.json
+++ b/composer.json
@@ -48,14 +48,10 @@
   },
   "scripts": {
     "post-install-cmd": [
-      "make on-install-or-update || true",
-      "composer normalize",
-      "composer update --lock --no-scripts"
+      "make on-install-or-update || true"
     ],
     "post-update-cmd": [
-      "make on-install-or-update || true",
-      "composer normalize",
-      "composer update --lock --no-scripts"
+      "make on-install-or-update || true"
     ],
     "pre-autoload-dump": [
       "WyriHaximus\\Makefiles\\Composer\\Installer::findEventListeners"
