Enable PHPStan for infection

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
   "require-dev": {
     "wyrihaximus/test-utilities": "^8.4.0"
   },
+  "conflict": {
+    "infection/infection": "<0.31.3"
+  },
   "autoload": {
     "psr-4": {
       "WyriHaximus\\Makefiles\\": "src"
