--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,6 +1,9 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "github>WyriHaximus/renovate-config:php-package-dev"
-  ]
+    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+    "extends": [
+        "github>WyriHaximus/renovate-config:php-package-dev"
+    ],
+    "constraints": {
+        "php": "8.4.x"
+    }
 }
