--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,6 +4,7 @@
         "github>WyriHaximus/renovate-config:php-package-dev"
     ],
     "constraints": {
-        "php": "8.4.x"
+        "php": "8.4.x",
+        "composer": "2.x"
     }
 }
